2006-12-22  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendsize.c: Compilation fix.

2006-12-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/packet.c (pkt_init_empty): New function.
	* common-src/packet.h (pkt_init_empty): New prototype.
	* amandad-src/amandad.c, common-src/protocol.c,
	  common-src/security-util.c: Use pkt_init_empty.

2006-12-18  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/conffile.c: Print nothing if the list is emtpy.

2006-12-14  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/restore.c: Fix filename for output file.

2006-12-12  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c: Fix printf format error.

2006-12-12  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amanda.h: Define __attribute__ for gcc >= 3.
	* common-src/packet.c (pkt_init): Accept NULL for fmt.
	* amandad-src/amandad.c, common-src/protocol.c,
	  common-src/security-util.c: Pass NULL to pkt_init.
	* amandad-src/amandad.c, changer-src/chg-scsi.c,
	  changer-src/scsi-linux.c, client-src/sendbackup.c,
	  common-src/amanda.h, common-src/event.c,
	  common-src/packet.c, common-src/security-util.c,
	  common-src/stream.c, oldrecover-src/amrecover.c,
	  restore-src/restore.c, server-src/amcheck.c,
	  server-src/driver.c, server-src/driverio.c,
	  server-src/taper.c: Fix printf format error.

2006-12-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amindexd.c: Use fgets to read index file because they
	                         are not quoted.

2006-12-12  Jean-Louis Martineau <martineau@zmanda.com>
	* configure.in: Find patch for sort program.
	* server-src/amindexd.c: Clean the indexd file between the uncompress
				 and sort process.

2006-12-08  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amadmin.8.xml, man/xml-source/amanda.8.xml,
	  man/xml-source/amanda.conf.5.xml, man/xml-source/amcheck.8.xml,
	  man/xml-source/amfetchdump.8.xml, man/xml-source/ammt.8.xml,